--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-import tkinter as tk
-from tkinter import ttk, messagebox, simpledialog
-from docx import Document
-from docx.shared import Inches
-from docx.enum.text import WD_PARAGRAPH_ALIGNMENT, WD_BREAK
-from datetime import datetime
-import matplotlib.pyplot as plt
-import numpy as np
+python-docx
+matplotlib
+numpy
